# EmuRL

./: .gitignore  CLAUDE.md  README.md  evaluate_policy.py  pretrain_visual.py  pyproject.toml  train_with_cnn_reward.py  validate_training.py
configs/: video_crop_config.json
data_collection/: collect_speedrun_data.py  download_letsplay_playlist.py  download_single_video.py  download_twitch_videos.py  download_youtube_videos.py  preprocess_simple.py  preprocess_videos.py  scrape_archive.py  scrape_speedruns.py  scrape_youtube.py
phase2_reward/: train_reward.py  train_reward_cnn.py  train_reward_global.py  train_reward_sequence.py
phase3_rl/: train_with_cnn_reward.py
tests/data_collection/: test_collect_speedrun_data.py  test_download_single_video.py  test_preprocess_simple.py  test_preprocess_videos.py  test_scrape_speedruns.py  test_scrape_youtube.py
tests/tools/: test_crop_tool.py
tools/: analyze_video_crops.py  crop_tool.py  ood_detector.py
