[project]
name = "emurl"
version = "0.1.0"
description = "RL training framework for emulated games (Pokemon Red)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "jax[cuda12]>=0.4.20",
    "flax>=0.8.0",
    "optax>=0.1.7",
    "pillow>=10.0",
    "wandb>=0.16",
    "yt-dlp>=2024.1",
    "opencv-python>=4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "emurust",
]

[tool.uv.sources]
emurust = { path = "../EmuRust", editable = true }
